--- a/app/components/editor/main_component.html.erb
+++ b/app/components/editor/main_component.html.erb
@@ -1,3 +1,3 @@
 <div class="flex-1 relative bg-white dark:bg-[#0D1117]" data-controller="editor--main editor--persistence">
-  <div data-editor-target="container" class="absolute inset-0 z-10 text-base"></div>
+  <div data-editor--main-target="container" class="absolute inset-0 z-10 text-base"></div>
 </div>
