--- a/app/components/layout/header_component.html.erb
+++ b/app/components/layout/header_component.html.erb
@@ -49,7 +49,7 @@
         title="サンプルコード"
       >
         <%= inline_svg_tag "icons/code.svg", class: "w-4 h-4" %>
-        <span>Examples*</span>
+        <span>Examples</span>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3 text-slate-400">
           <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
         </svg>
